# ChangeLog for x11-misc/xdotool
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdotool/ChangeLog,v 1.11 2010/05/23 20:01:35 pacho Exp $

  23 May 2010; Pacho Ramos <pacho@gentoo.org> xdotool-20091231.02.ebuild:
  stable amd64, bug 312729

  25 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  xdotool-20091231.02.ebuild:
  x86 stable wrt bug #312729

  08 Apr 2010; Christian Birchinger <joker@gentoo.org>
  -xdotool-20090815.ebuild, xdotool-20091231.02.ebuild:
  Removing raw-ldflags() stops the QA notice about ignored LDFLAGS. The user
  LDFLAGS show up in raw form during src_compile and it seems to work

  08 Apr 2010; Christian Birchinger <joker@gentoo.org>
  -xdotool-20090815.ebuild:
  Remove older versions.

*xdotool-1.20100318.2737 (08 Apr 2010)

  08 Apr 2010; Christian Birchinger <joker@gentoo.org>
  +xdotool-1.20100318.2737.ebuild:
  Version bump. Droped 2 patches that now seem unneeded, because the install
  target creates the needed directories now and the linker target got the
  LIBS moved at the end of the arguments.

  14 Jan 2010; Christian Birchinger <joker@gentoo.org>
  xdotool-20091231.02.ebuild:
  Added RESTRICT=test and a reason for it.

*xdotool-20091231.02 (14 Jan 2010)

  14 Jan 2010; Christian Birchinger <joker@gentoo.org>
  +xdotool-20091231.02.ebuild, +files/xdotool-20091231.02_as-needed.patch,
  +files/xdotool-20091231.02_install-D.patch:
  Version bump and ebuild cleanups.

  30 Oct 2009; Markus Meier <maekke@gentoo.org> xdotool-20090609.ebuild:
  amd64/x86 stable, bug #289978

*xdotool-20090815 (21 Oct 2009)

  21 Oct 2009; Christian Birchinger <joker@gentoo.org>
  +xdotool-20090815.ebuild:
  Version bump.

  03 Aug 2009; Christian Birchinger <joker@gentoo.org>
  xdotool-20090609.ebuild:
  Change the linker argument order to LDFLAGS, objects, libraries.

  15 Jul 2009; Christian Birchinger <joker@gentoo.org>
  xdotool-20090609.ebuild: